# LIAN-old

./: .gitignore  Bresenham.cpp  Bresenham.h  CMakeLists.txt  LianSearch.pro  Queues.cpp  Queues.h  README.md  cConfig.cpp  cConfig.h  cList.cpp  cList.h  cLogger.cpp  cLogger.h  cMap.cpp  cMap.h  cMission.cpp  cMission.h  cSearch.h  cXmlLogger.cpp  cXmlLogger.h  config.cpp  config.h  gl_const.h  liansearch.cpp  liansearch.h  logger.h  main.cpp  map.cpp  map.h  mission.cpp  mission.h  node.h  openlist.cpp  openlist.h  sNode.h  search.h  searchresult.h  xml_logger.cpp  xml_logger.h  (+2 more)
examples/: 1.xml  2.xml  baldurs.xml  baldurs_log.xml  crash.xml  crash_log.xml  example.xml  example_1.xml  example_1_log.xml  example_1_log1.xml  example_1_log2.xml  example_2.xml  example_2_log.xml  example_log.xml  in.xml  in_log.xml  moscow_map.xml  moscow_map_log.xml
tools/: AStar  Astar  process.py  stat_1.ipynb  testMaker.py
tools/algorithm_params/: Astar.json  LIAN_D_10-5_F2.json  LIAN_D_20-5_F2.json  LIAN_D_6-3_F1,5.json  LIAN_R10.json  LIAN_R20.json  LIAN_R5.json  Theta.json  _sample.json
